--- a/src/components/imageGallery/ImageGallery.module.css
+++ b/src/components/imageGallery/ImageGallery.module.css
@@ -13,5 +13,9 @@
   width: 390px;
   height: 250px;
   border-radius: 10px;
-  box-shadow: 5px 5px 5px rgb(120, 118, 233);
+
+  &:hover {
+    box-shadow: 5px 5px 5px rgb(120, 118, 233);
+    transform: scale(1.02);
+  }
 }
