--- a/src/components/imageModal/ImageModal.module.css
+++ b/src/components/imageModal/ImageModal.module.css
@@ -1,8 +1,14 @@
 .modal {
-  top: 50%;
-  left: 50%;
-  right: auto;
-  bottom: auto;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+  position: relative;
+  max-width: 70%;
+  max-height: 90%;
+  overflow: auto;
+  margin: 40px auto 0 auto;
+  outline: none;
+  border-radius: 10px;
+}
+.modalImage {
+  display: block;
+  width: auto;
+  height: auto;
 }
